Imported table of contents
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/lume/blog/2019-08-19-25.md
+++ b/lume/blog/2019-08-19-25.md
@@ -8,6 +8,10 @@ tags:
 - "meta"
 ---
 
+## Table of Contents
+
+## Preamble
+
 It's 6:30pm on my 25th birthday and I've been reflecting a bit on what I've managed to accomplish so far. While this isn't a post about that, there's no better time to assess the state of my personal site and where I'd like to go forward.
 
 ## The current state
