--- a/lume/blog/2020-08-30-day-one.md
+++ b/lume/blog/2020-08-30-day-one.md
@@ -8,6 +8,10 @@ tags:
 - "work"
 ---
 
+## Table of Contents
+
+## Preamble
+
 It's the night before my first day with Mercedes-Benz as a Site Reliability Engineer. This post is a sequel to [Day Xero](https://utf9k.net/blog/day-xero), written a few years back.
 
 It was never intended to have a follow-up, but it might be a nice reference point to capture how I'm feeling each time I'm about to enter an entirely foreign environment.
