--- a/lume/blog/2021-10-26-day-two.md
+++ b/lume/blog/2021-10-26-day-two.md
@@ -9,6 +9,10 @@ tags:
 - "reliability"
 ---
 
+## Table of Contents
+
+## Preamble
+
 I've recently started as a Senior Site Reliability Engineer at [Lightspeed](https://lightspeedhq.com/) which means that it's time for the sequel to [Day One](/blog/day-one).
 
 For the uninitiated, I write a new post summing up the excitement and concerns I have whenever I start a new job.
