--- a/_astro/src/content/blog/2017-02-05-deepfakes.mdx
+++ b/_astro/src/content/blog/2017-02-05-deepfakes.mdx
@@ -9,8 +9,9 @@ tags:
   - "future"
   - "technology"
 ---
+import Notice from "../../components/Notice.astro"
 
-{{% notice title="💿 This post has been remastered slightly due to its age." %}}
+<Notice emoji="💿" title="This post has been remastered slightly due to its age.">
 I've made some slight rewordings, fixed typos and revived any links I could using the [Wayback Machine](https://web.archive.org/) but otherwise, the post is 99% intact from when I first wrote it.
 
 I didn't realise just how much I had written about this at the time.
@@ -18,7 +19,7 @@ I didn't realise just how much I had written about this at the time.
 I'm kind of glad since this was written before the subreddit was banned.
 
 A lot of the content discussed is now lost to time.
-{{% /notice %}}
+</Notice>
 
 ## An overview
 
@@ -64,8 +65,7 @@ Once the user has determined that both models are sufficiently trained, the netw
 
 Without much in the way of deeply detailed explanations to go on, this is my best attempt however I can't speak much on the final conversation process. To illustrate the result, here is the original [Gal Gadot](https://en.wikipedia.org/wiki/Gal_Gadot) conversion posted by deepfakes himself. **As indicated earlier, the following is pornography and is definitely not safe for work**.
 
-{{% notice title="There's nothing here anymore!" %}}
-
+<Notice emoji="📭" title="There's nothing here anymore!">
 This portion originally linked to an extremely [NSFW](https://en.wikipedia.org/wiki/Not_safe_for_work) deepfake video for archival purposes.
 
 It used to reside at [https://www.pornhub.com/embed/ph5a27755783e28](https://www.pornhub.com/embed/ph5a27755783e28)[^deadlink] but has long since been removed.
@@ -73,8 +73,7 @@ It used to reside at [https://www.pornhub.com/embed/ph5a27755783e28](https://www
 The original caption I provided read as follows:
 
 > "The video was a pornstar with Gal Gadot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!"
-
-{{% /notice %}}
+</Notice>
 
 I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as ["embarassingly simple"](https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/)[^deadlink].
 
