Start converting posts to MDX
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/content/projects/meta-oia-requests.mdx
+++ b/_astro/src/content/projects/meta-oia-requests.mdx
@@ -12,6 +12,8 @@ tags:
   - "projects"
 ---
 
+import MetaOIATable from "../../components/MetaOIATable.astro"
+
 This one probably needs a bit of explanation, more than most of my projects.
 
 The short version is that here in New Zealand, we have the [Official Information Act of 1982](https://en.wikipedia.org/wiki/Official_Information_Act_1982) or OIA for short.
@@ -32,42 +34,11 @@ At some point, I may file a request to backfill some data prior to when this lis
 
 I'm due to file my next update sometime around August or September 2021
 
-{{< metaoiatable.inline >}}
-
-<table>
-  <thead>
-    <tr>
-      {{ range $.Site.Data.metaoia.headings }}
-      <th>{{ . }}</th>
-      {{ end }}
-    </tr>
-  </thead>
-  <tbody>
-    {{ range sort $.Site.Data.metaoia.entries "ID" "desc" }}
-      <tr>
-        <td>{{ .RequestDate }}</td>
-        <td>{{ .Subject }}</td>
-        <td>{{ .DeniedUnder }}</td>
-      </tr>
-    {{ end }}
-  </tbody>
-</table>
-{{< /metaoiatable.inline >}}
-
-[Spotted something wrong with the table or just want a copy of the data?](https://github.com/marcus-crane/utf9k/blob/live/data/metaoia.yml)
-
-Job opportunities recinded due to this project: **2**
+<MetaOIATable />
 
 ---
 
-Sources:
+{/** TODO: Fix reference to source file */}
+[Spotted something wrong with the table or just want a copy of the data?](https://github.com/marcus-crane/utf9k/blob/live/data/metaoia.yml)
 
-2016 - 2017: [FOIA Sections S6 (a) and S (6) b (i) - fyi.govt.nz](https://fyi.org.nz/request/4578-foia-sections-s6-a-and-s-6-b-i#incoming-14960)
-
-2017 - 2018: [Withheld / Rejected OIA Filings - fyi.govt.nz](https://fyi.org.nz/request/6763-withheld-rejected-oia-filings#incoming-22439)
-
-2018 - 2019: [FOIA Sections S6(a) and S(6)b(i) - Oct 2018 - Oct 2019](https://fyi.org.nz/request/11587-foia-sections-s6-a-and-s-6-b-i-oct-2018-oct-2019)
-
-2019 - 2020: [FOIA Sections S6(a) and S(6)b(i) - Nov 2019 - Aug 2020](https://fyi.org.nz/request/13527-foia-sections-s6-a-and-s-6-b-i-nov-2019-aug-2020)
-
-2020 - 2021: [[DPMC] OIAs affected by Section 6 | Aug 2020 - Aug 2021](https://fyi.org.nz/request/16579-dpmc-oias-affected-by-section-6-aug-2020-aug-2021)
+Job opportunities recinded due to this project: **2**
