Converted posts over to MDX
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/content/blog/2017-02-05-deepfakes.mdx
+++ b/_astro/src/content/blog/2017-02-05-deepfakes.mdx
@@ -80,7 +80,7 @@ I chose the clip above because it provides a good indication of what works but a
 
 ## Is this bad?
 
-Well, that's really up to your own personal beliefs, isn't it? It would seem to be a moral issue at best, as technically it doesn't seem to be illegal. An interviewee in [this Wired story](https://www.wired.com/story/face-swap-porn-legal-limbo/) sums it up as far as US law is concerned: "There are all sorts of First Amendment problems because it’s not their real body.". The assumption seems to be that any such creations could be considered art, not unlike a painting or a photoshop edit, which is legally understandable, but still feels a bit ethically shady.
+Well, that's really up to your own personal beliefs, isn't it? It would seem to be a moral issue at best, as technically it doesn't seem to be illegal. An interviewee in [this Wired story](https://www.wired.com/story/face-swap-porn-legal-limbo/) sums it up as far as US law is concerned: "There are all sorts of First Amendment problems because it's not their real body.". The assumption seems to be that any such creations could be considered art, not unlike a painting or a photoshop edit, which is legally understandable, but still feels a bit ethically shady.
 
 The obvious societal issue here is that it's presumably the next step in being able to objectify others? Rejected by your crush? Bust out the ol' [Human Pokedex](https://facebook.com) and scrape enough data to generate your own virtual fantasy. They might object but that's ok, right? You're not actually there to respect their wishes, it's their body you're after and that's all, right?
 
