--- a/_astro/src/content/blog/2021-05-22-ride-the-curve.mdx
+++ b/_astro/src/content/blog/2021-05-22-ride-the-curve.mdx
@@ -11,7 +11,9 @@ tags:
   - "selfcare"
 ---
 
-{{% notice emoji="🚣‍♀️" title="It's rough seas out there!" %}}
+import Notice from "../../components/Notice.astro"
+
+<Notice emoji="🚣‍♀️" title="It's rough seas out there!">
 Not so long ago, I was struggling with instances of <a href="https://en.wikipedia.org/wiki/Depersonalization">something very unfamiliar</a> , which scared the shit out of me.
 
 As one of many distractions, I popped open a text editor and started writing about my life so far and this is what came out.
@@ -21,7 +23,7 @@ I've strongly resisted the urge to make any edits, beyond adding links for conte
 I haven't fully reread it nor do I really intend to. I also never got to the actual point of the title, which is what I started off with as a prompt.
 
 In short, I'm trying to relax more and look after myself. That doesn't mean stopping work but riding the momentum I already built up, whether I realise it or not.
-{{% /notice %}}
+</Notice>
 
 Generally, I tend to worry a lot about what things might look like in the future.
 
