--- a/_astro/src/content/blog/2021-07-12-hugo-debug-reports.mdx
+++ b/_astro/src/content/blog/2021-07-12-hugo-debug-reports.mdx
@@ -12,11 +12,13 @@ tags:
   - "staticsites"
 ---
 
+import { Tweet } from "@astro-community/astro-embed-twitter"
+
 Recently I discovered that [Hugo](https://gohugo.io) added support for [inline shortcodes](https://gohugo.io/templates/shortcode-templates/) like 30 versions ago.
 
 According to [bep](https://github.com/bep), the reason I had never heard about them was simple:
 
-{{< tweet user="bepsays" id="1408348824083615745" >}}
+<Tweet id="https://twitter.com/bepsays/status/1408348824083615745" />
 
 ## A shortcode refresher
 
