--- a/_astro/src/content/blog/2021-10-01-twitter-image-servers-2021.mdx
+++ b/_astro/src/content/blog/2021-10-01-twitter-image-servers-2021.mdx
@@ -10,6 +10,8 @@ tags:
   - "twitter"
 ---
 
+import { Tweet } from "@astro-community/astro-embed-twitter"
+
 For anyone who knows me, it's no surprise that I'm horribly addicted to [Twitter](https://twitter.com). I joined back in 2009[^1] and I've fallen into more [technical rabbit holes](/blog/automation-right/) than I care to.
 
 As a Twitter user who is Very Online, I love to theorise about why services go wrong and poke fun at corporations but as an [SRE](https://en.wikipedia.org/wiki/Site_reliability_engineering) myself, I find it very difficult to direct blame at people.
@@ -64,7 +66,7 @@ For a period of about 2 weeks, images with transparency such as macOS screenshot
 
 You'll see it looks like someone took the spray can from MS Paint and went to town on the edges of the image. That is supposed to be a nice crisp drop shadow!
 
-{{< tweet user="sentreh" id="1436092048914796545" >}}
+<Tweet id="https://twitter.com/sentreh/status/1436092048914796545" />
 
 While this appears to have been fixed recently, it was also not acknowledged as far as I can tell. Just kind of weirdly broken in plain sight for days on end.
 
@@ -76,7 +78,7 @@ As I mentioned before, I don't want to point fingers at any people but I will sa
 
 Instead, right in the middle of those two transparency mulched images, what I experienced was [@TwitterEng](https://twitter.com/TwitterEng) was talking about mechanical keyboards.
 
-{{< tweet user="TwitterEng" id="1437857022444138496" >}}
+<Tweet id="https://twitter.com/TwitterEng/status/1437857022444138496" />
 
 I'm being a bit flippant mind you since it can be true that one team is doing community building while another is working on technical issues of course but at the same time, the optics of it don't look great as someone experiencing this.
 
