--- a/_astro/src/content/blog/2023-11-21-vehicle-congestion-gnss.mdx
+++ b/_astro/src/content/blog/2023-11-21-vehicle-congestion-gnss.mdx
@@ -58,7 +58,7 @@ More relevant for New Zealand is this [unfortunately titled](https://en.wikipedi
 
 It's still getting dark so I'm just going to skip to the spoilers on Page 38:
 
-> We found that automatic number plate recognition technology is likely to be the most suitable and cost-effective solution for a congestion pricing scheme that is available today. This is already in use on New Zealand’s three toll roads and would be necessary for any scheme for enforcement purposes.
+> We found that automatic number plate recognition technology is likely to be the most suitable and cost-effective solution for a congestion pricing scheme that is available today. This is already in use on New Zealand's three toll roads and would be necessary for any scheme for enforcement purposes.
 >
 > In the near future, in-vehicle technology incorporating a Global Satellite Navigation System (GNSS) could offer a more sophisticated solution, but there are a number of risks and logistical barriers to overcome before this is feasible.
 
