--- a/_astro/src/content/blog/2019-03-20-future-of-emergency-services.mdx
+++ b/_astro/src/content/blog/2019-03-20-future-of-emergency-services.mdx
@@ -33,7 +33,7 @@ My second question, and one that I'm not really qualified to answer, is to do wi
 
 The [St John](https://en.wikipedia.org/wiki/St_John_New_Zealand) Organisation are the primary dispatcher of ambulances in New Zealand, providing emergency services to [nearly 90% of New Zealanders](https://www.stjohn.org.nz/What-we-do/St-John-Ambulance-Services/) according to their own website.
 
-They have a handy [section on response times](https://www.stjohn.org.nz/News--Info/Our-Performance/Response-Times/) which links to the [Ministry of Health's Emergency Ambulance Service national performance reports](https://www.health.govt.nz/new-zealand-health-system/key-health-sector-organisations-and-people/naso-national-ambulance-sector-office/emergency-ambulance-services-eas/performance-quality-and-safety/emergency-ambulance-service-national-performance-reports). Look a bit closer and you'll see "For information about St John’s performance visit the performance section of their web site." which just leads us back to where we started!
+They have a handy [section on response times](https://www.stjohn.org.nz/News--Info/Our-Performance/Response-Times/) which links to the [Ministry of Health's Emergency Ambulance Service national performance reports](https://www.health.govt.nz/new-zealand-health-system/key-health-sector-organisations-and-people/naso-national-ambulance-sector-office/emergency-ambulance-services-eas/performance-quality-and-safety/emergency-ambulance-service-national-performance-reports). Look a bit closer and you'll see "For information about St John's performance visit the performance section of their web site." which just leads us back to where we started!
 
 Thankfully, their annual reports contain some of the information we're after. Let's take the [2018 Annual report](https://www.stjohn.org.nz/globalassets/documents/publications/annual-report/stj-annual-report_2018_lq.pdf) as an example.
 
