--- a/_astro/src/content/blog/2020-01-06-multiple-git-hosts.mdx
+++ b/_astro/src/content/blog/2020-01-06-multiple-git-hosts.mdx
@@ -11,11 +11,13 @@ tags:
   - "linux"
 ---
 
-{{% notice title="Some things have changed since I first wrote this" %}}
+import Notice from "../../components/Notice.astro"
+
+<Notice emoji="⏰" title="Some things have changed since I first wrote this">
 At the time of writing, I was using Gitlab so you'll see references to my dotfiles living there.
 
 I've now moved back to Github but kept the references to Gitlab in this post intact.
-{{% /notice %}}
+</Notice>
 
 When using my work laptop, I like to keep a copy of my dotfiles so that my tools at work are in sync with my tools at home. They [live in a Github repository](https://github.com/marcus-crane/dotfiles) under my personal account, and I use plain old git to sync changes.
 
