--- a/_astro/src/content/blog/2021-04-27-dropbox-is-way-too-clingy.mdx
+++ b/_astro/src/content/blog/2021-04-27-dropbox-is-way-too-clingy.mdx
@@ -13,6 +13,8 @@ tags:
   - "software"
 ---
 
+{/* TODO: An image in this post needs fixing if I remember right */}
+
 As much as [Dropbox](https://www.dropbox.com) is great on a technical level, the user experience keeps degrading all the time.
 
 Installing it is a complete nightmare of clicking through super slow window transitions and banners begging you to upgrade your account.
