Fix remaining MDX conversion issues
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/content/blog/1970-01-01-one-possible-death-for-discord.mdx
+++ b/_astro/src/content/blog/1970-01-01-one-possible-death-for-discord.mdx
@@ -26,7 +26,7 @@ For those who haven't used Discord or even heard of it, it's a "communications" 
 
 Slack has come a long way but from memory, back around the mid-2010s, it was painful being a large community using Slack. Inviting people was hard enough because you had to send them an email invite. This didn't really scale so people would make these pseudo-self service websites where you would enter your email and then someone would get back to you, or something like that.
 
-The other, more relevant issue was the hidden user limit on the free tiers. For open source communities and the like, they quickly found that their workspaces would [max out at around 5000+ users](https://www.freecodecamp.org/news/so-yeah-we-tried-slack-and-we-deeply-regretted-it-391bcc714c81/) making the app barely useable. Some groups "fixed" this by having overflow workspaces (ie <project-name>-2) and so on while others migrated to other platforms, with Discord being one of them.
+The other, more relevant issue was the hidden user limit on the free tiers. For open source communities and the like, they quickly found that their workspaces would [max out at around 5000+ users](https://www.freecodecamp.org/news/so-yeah-we-tried-slack-and-we-deeply-regretted-it-391bcc714c81/) making the app barely useable. Some groups "fixed" this by having overflow workspaces (ie `<project-name>-2`) and so on while others migrated to other platforms, with Discord being one of them.
 
 This is all anecdotal of course but between the ability to self invite yourself to Discord servers and the ability to support tens of thousands of users, it seemed to be more viable than Slack, for non-paying users, back then anyway. Slack does scale to much, much higher numbers for paying users, and their [enterprise plan](https://slack.com/intl/en-nz/enterprise) allows you to effectively pseudo-"partition" your business into multiple workspaces. I say pseudo because some channels may span across multiple spaces while others only exist within one workspace but that's besides the point.
 
