--- a/_astro/src/content/blog/2021-05-11-always-bet-on-sales.mdx
+++ b/_astro/src/content/blog/2021-05-11-always-bet-on-sales.mdx
@@ -36,7 +36,7 @@ I captured some footage following the dialogue path of these three options durin
 You might imagine that this would be the most important option when it comes to resiliency during any major outages. Of course, if you're an enterprise then you should really have an enterprise support plan but if you're a startup or an indie, this might be well outside your budget.
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/01-technical.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/01-technical.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
@@ -47,7 +47,7 @@ Hmm, I don't know about you but it looked like nothing happened and our request 
 Now surely if a technical person can't get through, business support is much more likely to make it. Nothing says importance like an executive with a credit card after all.
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/02-business.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/02-business.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
@@ -62,7 +62,7 @@ In any sane business, all attention should be directed towards supporting paying
 It'd be ridiculous to focus on some potentially unrealised future revenues!
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/03-sales.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/always-bet-on-sales/03-sales.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
