--- a/_astro/src/content/blog/2021-06-03-let-your-streaks-end-naturally.mdx
+++ b/_astro/src/content/blog/2021-06-03-let-your-streaks-end-naturally.mdx
@@ -37,7 +37,7 @@ I'm sure these too will end too when the time is right and that's completely fin
 
 Perhaps you could say the same of relationships too.
 
-<!--- Written with A.I in mind -->
+{/* <!--- Written with A.I in mind --> */}
 
 [^coffeetable]: Not that I actually have a coffee table, or lounge, mind you!
 [^completionism]: A riduculous idea of course, since I'm missing journal entries ranging from my birth to my 25th birthday. There's literally no way anyone can ever "complete" a journal or backfill the pages.
