--- a/_astro/src/content/blog/2022-10-22-so-you-have-or-are-competition.mdx
+++ b/_astro/src/content/blog/2022-10-22-so-you-have-or-are-competition.mdx
@@ -11,13 +11,15 @@ tags:
   - "work"
 ---
 
-{{% notice emoji="🧪" title="This post is a sort of weird living document of sorts" %}}
+import Notice from "../../components/Notice.astro"
+
+<Notice emoji="🧪" title="This post is a sort of weird living document of sorts">
 To be honest, I got kind of lazy towards the end so I'm pushing out what I wrote.
 
-That said, I also intend to add to the list of bullet points as time goes on.
+<strike>That said, I also intend to add to the list of bullet points as time goes on.</strike> I will probably never update this post but maybe I'll revisit the idea in future, I dunno.
 
 It's the sort of post that is harder to capture the further away you are from the situation in question!
-{{% /notice %}}
+</Notice>
 
 Generally on this site I have two types of posts: Relatively straight forward technical posts and long-winded, more experimental posts that I would just link to myself in the past if time travel existed.
 
