--- a/_astro/src/content/blog/2021-02-13-a-recently-horrible-iteration-of-google-search.mdx
+++ b/_astro/src/content/blog/2021-02-13-a-recently-horrible-iteration-of-google-search.mdx
@@ -27,7 +27,7 @@ Having said that, the fact that someone at Google signed off on what was, until 
 I just happen to have taken a screen recording of this mess which was live at least as recently as early December and so that's what I'd like to present to you now:
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/google-search-the-sopranos.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/google-search-the-sopranos.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
@@ -59,7 +59,7 @@ I don't understand though. Is this what the data showed that users were craving?
 For comparison, here is what the equivalent search in [DuckDuckGo](https://duckduckgo.com) looked like on that same day:
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/ddg-search-the-sopranos.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/ddg-search-the-sopranos.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
@@ -68,7 +68,7 @@ Not only was that much easier, it actually inlined a bunch of links you might wa
 I was also trying out [Ecosia](https://www.ecosia.org) at the time too:
 
 <video style="display: inherit; margin: 0 auto;" width="50%" controls>
-<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/ecosia-search-the-sopranos.mp4" type="video/mp4">
+<source preload src="https://cdn.utf9k.net/blog/a-recently-horrible-iteration-of-google-search/ecosia-search-the-sopranos.mp4" type="video/mp4" />
 Ah, sorry! It looks like your browser either hates the h264 codec or it just doesn't support the video tag.
 </video>
 
