--- a/src/content/blog/2024-03-20-beeminder-is-neat.mdx
+++ b/src/content/blog/2024-03-20-beeminder-is-neat.mdx
@@ -86,7 +86,7 @@ The next day, I had a step count goal come due so I went for a walk and "Ah! I f
 
 Of course, it's a little bit of a fluke but if you stagger your Beeminder goals just right, it can keep you on track when it really makes a difference.
 
-Ironically, I once complained about how [software often account for the user taking a break](http://localhost:1313/blog/who-is-software-even-for) and here we have a surprising case of the opposite: The software not letting me take a break was actually helpful in the long run.
+Ironically, I once complained about how [software usually fails to account for the user taking a break](http://localhost:1313/blog/who-is-software-even-for) and here we have a surprising case of the opposite: Software not letting me take a break was actually helpful in the long run.
 
 Now I should mention that if you're not careful, you could over-eagerly set an overwhelming amount of goals and completely crush yourself so [there's an art to being reasonable](https://blog.beeminder.com/calendial/) of course.
 
