--- a/src/content/blog/2024-03-20-beeminder-is-neat.mdx
+++ b/src/content/blog/2024-03-20-beeminder-is-neat.mdx
@@ -78,13 +78,17 @@ Nothing to be worried about but the sort of stuff that makes you want to climb i
 
 "Everything sucks and I want to stay inside" is what I thought and the very last thing on my mind is making progress towards my goals.
 
-While my drive to make progress might depend on my mood, my drive to avoid being charged money is universal and that actually helped a lot!
+While my drive to make progress might depend on my mood, my drive to avoid being charged money is fairly universal and that actually helped a lot!
 
 On that day, my goal for watching a movie came due so begrudgingly, I fired up a film and oh hey, that was actually kinda fun.
 
 The next day, I had a step count goal come due so I went for a walk and "Ah! I feel much better!".
 
-Of course, it's a little bit of a fluke but if you stagger your Beeminder goals just right, it can keep you on track when it really makes a difference.
+Another reasonable response might also be to just throw my goals out the window and crawl back into bed but none of the presentation is personal enough to make me want to lash out like that.
+
+Beeminder is just sort of there, showing me the price of not doing business. Better still, I can do literally nothing besides whatever goals are due for the day and I can take comfort knowing I've made tangible progress.
+
+In this particular case, it was a little bit of a fluke but if you get the staggering just right, it can make a big difference when it counts.
 
 Ironically, I once complained about how [software usually fails to account for the user taking a break](http://localhost:1313/blog/who-is-software-even-for) and here we have a surprising case of the opposite: Software not letting me take a break was actually helpful in the long run.
 
