Another slight edit
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/content/blog/2024-03-20-beeminder-is-neat.mdx
+++ b/src/content/blog/2024-03-20-beeminder-is-neat.mdx
@@ -86,7 +86,7 @@ The next day, I had a step count goal come due so I went for a walk and "Ah! I f
 
 Another reasonable response might also be to just throw my goals out the window and crawl back into bed but none of the presentation is personal enough to make me want to lash out like that.
 
-Beeminder is just sort of there, showing me the price of not doing business. Better still, I can do literally nothing besides whatever goals are due for the day and I can take comfort knowing I've made tangible progress.
+Beeminder is just sort of there, showing me the price of not doing business and it's up to me to decide. Better still, I can do literally nothing besides whatever goals are due for the day and I can take comfort knowing I've made tangible progress.
 
 In this particular case, it was a little bit of a fluke but if you get the staggering just right, it can make a big difference when it counts.
 
