--- a/src/content/blog/2024-03-20-beeminder-is-neat.mdx
+++ b/src/content/blog/2024-03-20-beeminder-is-neat.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Beeminder is neat"
 date: 2024-03-20T22:10:00+13:00
-description: "Present me thinks it's neat. Past me has to actually do the work and didn't enjoy it so much."
+description: "Present me thinks it's neat. Past me had to actually do the work so it sucks to be them."
 slug: "beeminder-is-neat"
 category: "blog"
 tags:
