Remove dead footnote
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/content/blog/2024-04-27-learning-workflow.mdx
+++ b/src/content/blog/2024-04-27-learning-workflow.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How my learning workflow looks as of 2024"
 date: 2024-04-27T11:58:00+13:00
-description: "Well, on my best days. I have plenty of days where I doomscroll too."
+description: "Well, on my best days. I have plenty of days whehttps://en.wikipedia.org/wiki/Zettelkastenre I doomscroll too."
 slug: "learning-workflow-2024"
 category: "blog"
 tags:
@@ -58,7 +58,7 @@ I'll quickly go over each category of item and what sort of things I use them fo
 
 Most articles that I intend to read, and especially those that I want to refer for later, go straight into Reader.
 
-The source text is parsed straight out of the underlying webpage[^3] which makes for a nice standard reading style.
+The source text is parsed straight out of the underlying webpage[^2] which makes for a nice standard reading style.
 
 It's also a great form of protection against [link rot](https://en.wikipedia.org/wiki/Link_rot), ensuring that whatever text you've marked up is still available, even if the underlying webpage has since disappeared.
 
@@ -66,7 +66,7 @@ Occasionally, I'll also abuse this section as a bookmarking service. I'll use th
 
 Stuff like [documentation](https://diataxis.fr/) sites or web applications I come across should really go in a task manager but sometimes it's just convenient to refer to later since I know I'm going to be back within Reader pretty often.
 
-One great thing about the [browser extension](https://chromewebstore.google.com/detail/readwise-highlighter/jjhefcfhmnkfeepcpnilbbkaadhngkbi) is that it saves raw HTML, so if you've got a subscription to a paywall site, you can save the full text content for reading within Reader.[^4]
+One great thing about the [browser extension](https://chromewebstore.google.com/detail/readwise-highlighter/jjhefcfhmnkfeepcpnilbbkaadhngkbi) is that it saves raw HTML, so if you've got a subscription to a paywall site, you can save the full text content for reading within Reader.[^3]
 
 As far as reading articles, given they're pure text, I'll read them on whatever device I have handy such as a desktop, phone, tablet or e-ink reader.
 
@@ -186,8 +186,6 @@ The end result doesn't really matter so much though since the process is decentl
 
 [^1]: As evidenced by the fact that most of what I read is still stored in my brain instead of being remixed into something or other for my blog.
 
-[^2]: When I don't get side tracked with social media or whatever else. Like most things, it's a process problem, not a problem with the actual thing itself.
+[^2]: All of the interesting metadata as well as the ingestion source is still available for reference if needed.
 
-[^3]: All of the interesting metadata as well as the ingestion source is still available for reference if needed.
-
-[^4]: If you use any [alternative methods](https://archive.is/), those tend to work pretty well in my experience as well.
+[^3]: If you use any [alternative methods](https://archive.is/), those tend to work pretty well in my experience as well.
