--- a/src/content/blog/2024-10-02-retroid-pocket-4-pro.mdx
+++ b/src/content/blog/2024-10-02-retroid-pocket-4-pro.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Portable gaming with the Retroid Pocket 4 Pro"
 date: 2024-10-02T10:40:00+13:00
-description: "Reflections on turning 30"
+description: "I finally found a handheld that I really enjoy"
 slug: "retroid-pocket-4-pro"
 category: "blog"
 tags:
