Add image alt text
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/content/blog/2024-10-02-retroid-pocket-4-pro.mdx
+++ b/src/content/blog/2024-10-02-retroid-pocket-4-pro.mdx
@@ -12,7 +12,7 @@ tags:
 
 So far, my favourite purchase of the year has to be the [Retroid Pocket 4 Pro](https://www.goretroid.com/products/retroid-pocket-4-handheld).
 
-![](https://cdn.utf9k.net/blog/retroid-pocket-4-pro/steinsgate-train.jpg)
+![A photo of the author holding a Retroid Pocket 4 Pro with their left hand. Visible on the screen is Steins;Gate for the Playstation Portable. It's not entirely clear from the image but they are on a train.](https://cdn.utf9k.net/blog/retroid-pocket-4-pro/steinsgate-train.jpg)
 
 It's a handheld Android device that is powerful enough to play PS2 and Gamecube games, in addition to everything that came before those generations.
 
@@ -34,7 +34,7 @@ Anyway, it turns out Syncthing is perfect for this use case.
 
 The short version is that you point it at a directory and then you can share that directory with another computer running Syncthing. Each device syncing files can store them in their own unique location.
 
-![](https://cdn.utf9k.net/blog/retroid-pocket-4-pro/syncthing-desktop.png)
+![A screenshot of the Syncthing GUI running on a Windows desktop. Visible are shared folders for PS2, PS3 and PSP save directories.](https://cdn.utf9k.net/blog/retroid-pocket-4-pro/syncthing-desktop.png)
 
 As an example, on my desktop, I store my PS2 memory cards somewhere like `C:\Users\Marcus\Documents\PCSX2\MemoryCards` while on my Retroid Pocket 4 Pro, they're stored roughly in `/Android/data/xyz.aethersx2.android/files/memcards`.
 
