Start migrating blog posts back to standard Markdown
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/content/blog/2017-02-05-deepfakes.mdx
+++ b/src/content/blog/2017-02-05-deepfakes.mdx
@@ -10,17 +10,15 @@ tags:
   - "technology"
 ---
 
-import Notice from "../../components/Notice.astro"
-
-<Notice emoji="💿" title="This post has been remastered slightly due to its age.">
-I've made some slight rewordings, fixed typos and revived any links I could using the [Wayback Machine](https://web.archive.org/) but otherwise, the post is 99% intact from when I first wrote it.
-
-I didn't realise just how much I had written about this at the time.
-
-I'm kind of glad since this was written before the subreddit was banned.
-
-A lot of the content discussed is now lost to time.
-</Notice>
+> [!note] 💿 This post has been remastered slightly due to its age.
+>
+> I've made some slight rewordings, fixed typos and revived any links I could using the [Wayback Machine](https://web.archive.org/) but otherwise, the post is 99% intact from when I first wrote it.
+> 
+> I didn't realise just how much I had written about this at the time.
+>
+> I'm kind of glad since this was written before the subreddit was banned.
+> 
+> A lot of the content discussed is now lost to time.
 
 ## An overview
 
