Archive meta OIAs
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/content/projects/meta-oia-requests.mdx
+++ b/src/content/projects/meta-oia-requests.mdx
@@ -2,7 +2,7 @@
 title: "Yearly review of OIAs redacted or declined by the NZ government"
 category: "projects"
 slug: "meta-oia-requests"
-ongoing: true
+ongoing: false
 maxwidth: true
 description: "An ongoing project of mine where I ask some meta-questions about documents that are redacted each year in New Zealand"
 tags:
