PUSH NOTE : 2018-02-15 Day Xero.md

--- a/src/content/blog/2018-02-15 Day Xero.md
+++ b/src/content/blog/2018-02-15 Day Xero.md
@@ -1,14 +1,15 @@
 ---
-category: "blog"
+category: blog
 date: 2018-02-15T00:00:00+13:00
-description: "Thoughts upon entering my first proper job in the industry"
-slug: "day-xero"
+description: Thoughts upon entering my first proper job in the industry
+output: src/content/blog
+publish: true
+slug: day-xero
 tags:
-  - "anxiety"
-  - "work"
-title: "Day Xero"
+  - anxiety
+  - work
+title: Day Xero
 ---
-
 Technically it's Day 1 of my new job, a Graduate Site Reliability Engineer at [Xero](https://www.xero.com/nz/) but it hasn't officially started since I'm still on my way to the airport.
 
 I told myself that when I finally got my first full time development position, I'd write a big post mortem about how long it took, how many times I was rejected and all that but since I haven't (yet), this is my offering to the Content Overlords.
