PUSH NOTE : 2018-02-28 Lore Tabs.md

--- a/src/content/blog/2018-02-28 Lore Tabs.md
+++ b/src/content/blog/2018-02-28 Lore Tabs.md
@@ -1,13 +1,14 @@
 ---
-category: "blog"
+category: blog
 date: 2018-02-28T00:00:00+13:00
-description: "Stories are fascinating but speed running them is a recipe for trouble"
-slug: "lore-tabs"
+description: Stories are fascinating but speed running them is a recipe for trouble
+output: src/content/blog
+publish: true
+slug: lore-tabs
 tags:
-  - "people"
-title: "Humans don't come with lore tabs"
+  - people
+title: Humans don't come with lore tabs
 ---
-
 This post has been a long time coming because I've never really known how to express it. I'm not even sure I can write it properly anyway but I'm going to at least try.
 
 I recently started the Xero Graduate Programme which has been amazing! As with any new position, it inevitably involves meeting a lot of new people for the first time. I'm not really here to talk about the program itself which is a story for another time.
