PUSH NOTE : 2019-08-19 25.md

--- a/src/content/blog/2019-08-19 25.md
+++ b/src/content/blog/2019-08-19 25.md
@@ -1,13 +1,14 @@
 ---
-category: "blog"
+category: blog
 date: 2019-08-19T00:00:00+13:00
-description: "In which I turn 25 and look back over my writing hobby to date"
+description: In which I turn 25 and look back over my writing hobby to date
+output: src/content/blog
+publish: true
 slug: "25"
 tags:
-  - "meta"
+  - meta
 title: "25"
 ---
-
 It's 6:30pm on my 25th birthday and I've been reflecting a bit on what I've managed to accomplish so far. While this isn't a post about that, there's no better time to assess the state of my personal site and where I'd like to go forward.
 
 ## The current state
