PUSH NOTE : 2021-10-26 Day Two.md

--- a/src/content/blog/2021-10-26 Day Two.md
+++ b/src/content/blog/2021-10-26 Day Two.md
@@ -1,14 +1,15 @@
 ---
-category: "blog"
+category: blog
 date: 2021-10-27T12:01:00+13:00
-description: "Thoughts as I enter the third job of my career in the software industry"
-slug: "day-two"
+description: Thoughts as I enter the third job of my career in the software industry
+output: src/content/blog
+publish: true
+slug: day-two
 tags:
-  - "career"
-  - "reliability"
-title: "Day Two"
+  - career
+  - reliability
+title: Day Two
 ---
-
 I've recently started as a Senior Site Reliability Engineer at [Lightspeed](https://lightspeedhq.com/) which means that it's time for the sequel to [Day One](/blog/day-one).
 
 For the uninitiated, I write a new post summing up the excitement and concerns I have whenever I start a new job.
